#4199# Fixed right-hand sidebar overlap

--- a/styles/rightSidebar.css
+++ b/styles/rightSidebar.css
@@ -31,7 +31,6 @@
 	height: 100%;
 	margin-right: 10%;
 	margin-left: 2%;
-	overflow: hidden;
 }
 
 * html #rightSidebar { margin-right: 5%; }
